fix z-indexes

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ p{
   height: 100%;
   margin: 0;
   padding: 0;
-  z-index: 10000;
+  z-index: 100;
 }
 
 /***********************************
@@ -275,7 +275,7 @@ a:hover {
   font-size: 12px;
   font-family: 'Yanone Kaffeesatz', 'Droid Sans', sans-serif;
   padding: 10px;
-  z-index: 20;
+  z-index: 120;
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
   border-radius: 4px;
